[workspace]
members = [
    "atomics",
    "buffer",
    "fastmetrics",
    "heatmap",
    "histogram",
    "logger",
    "metrics",
    "metrics-v2",
    "ratelimiter",
    "streamstats",
    "time",
    "timer",
    "waterfall",
]

[profile.bench]
opt-level = 3
debug = true
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
