[workspace]
members = [
    "atomics",
    "buffer",
    "heatmap",
    "histogram",
    "logger",
    "metrics",
    "metrics/derive",
    "ratelimiter",
    "streamstats",
    "time",
    "timer",
    "waterfall",
]

[profile.bench]
opt-level = 3
debug = true
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
