[package]
name = "rustcommon-atomichash"
version = "0.1.0"
authors = ["Brian Martin <bmartin@twitter.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ahash = "0.5.1"

[dev-dependencies]
criterion = "0.3.3"
dashmap = "3.11.10"
rand = "0.7.3"
rand_distr = "0.3.0"

[[bench]]
name = "single_threaded"
harness = false

[profile.bench]
opt-level = 3
debug = false
debug-assertions = false
overflow-checks = false
lto = true
incremental = false
codegen-units = 1
rpath = false
