[package]
name = "rustcommon-atomics"
version = "1.0.0"
authors = ["Brian Martin <bmartin@twitter.com>"]
edition = "2021"
license = "Apache-2.0"
description = "Atomic primitives unified by traits"
homepage = "https://github.com/twitter/rustcommon/atomics"
repository = "https://github.com/twitter/rustcommon"

[dependencies]
serde = { version = "1.0.110", optional = true }

[features]
default = ["serde"]
