[package]
name = "rustcommon-datastructures"
version = "1.0.0"
authors = ["Brian Martin <bmartin@twitter.com>"]
edition = "2018"
license = "Apache-2.0"
description = "Common datastructures"
homepage = "https://github.com/twitter/rustcommon/datastructures"
repository = "https://github.com/twitter/rustcommon"

[dependencies]
log = "0.4.8"
rustcommon-atomics = { path = "../atomics" }
thiserror = "1.0.20"
time = "0.1.42"
