[package]
name = "rustcommon-heatmap"
version = "0.1.3"
authors = ["Brian Martin <bmartin@twitter.com>"]
edition = "2021"
license = "Apache-2.0"
description = "Heatmap datastructure for tracking distributions across a time window"
homepage = "https://github.com/twitter/rustcommon/heatmap"
repository = "https://github.com/twitter/rustcommon"

[dependencies]
rustcommon-atomics = { path = "../atomics" }
rustcommon-histogram = { path = "../histogram" }
rustcommon-time = { path = "../time" }
thiserror = "1.0.34"

[dev-dependencies]
criterion = "0.3.6"

[[bench]]
name = "heatmaps"
harness = false
