[package]
name = "heatmap"
version = "0.0.0"
authors = ["Brian Martin <bmartin@twitter.com>"]
edition = "2021"
license = "Apache-2.0"
description = "Heatmap datastructure for tracking distributions across a time window"
homepage = "https://github.com/twitter/rustcommon/heatmap"
repository = "https://github.com/twitter/rustcommon"

[dependencies]
histogram = { path = "../histogram" }
rustcommon-time = { path = "../time" }
thiserror = "1.0.34"

[dev-dependencies]
criterion = "0.3.6"

[[bench]]
name = "heatmap"
harness = false
