[package]
name = "rustcommon-histogram"
version = "1.0.1"
authors = ["Brian Martin <bmartin@twitter.com>"]
edition = "2021"
license = "Apache-2.0"
description = "Histograms with summary metrics and precision guarantees"
homepage = "https://github.com/twitter/rustcommon/histogram"
repository = "https://github.com/twitter/rustcommon"

[dependencies]
rustcommon-atomics = { path = "../atomics" }
thiserror = "1.0.31"

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "standard"
harness = false

[[bench]]
name = "atomic"
harness = false