[package]
name = "rustcommon-logger"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ahash = "0.7.4"
log = { version = "0.4.14", features = ["std"] }
rustcommon-metrics = { path = "../metrics" }
rustcommon-time = { path = "../time" }
mpmc = "0.1.6"
