[package]
name = "rustcommon-metrics-v2"
version = "0.1.0"
edition = "2018"
authors = ["Sean Lynch <seanl@twitter.com>"]
license = "Apache-2.0"

[features]
# histogram = [ "rustcommon-histogram" ]

[dependencies]
linkme = "0.2.6"
once_cell = "1.8.0"
parking_lot = "0.11.2"

rustcommon-metrics-derive = { path = "derive" }
rustcommon-histogram = { path = "../histogram", optional = true }
rustcommon-atomics   = { path = "../atomics",   optional = true }
