[package]
name = "rustcommon-metrics"
version = "2.0.0-alpha.0"
authors = ["Brian Martin <bmartin@twitter.com>"]
edition = "2018"
description = "Rich metrics library"
homepage = "https://github.com/twitter/rustcommon/metrics"
repository = "https://github.com/twitter/rustcommon"
license = "Apache-2.0"

[dependencies]
crossbeam = "0.8.0"
dashmap = "3.11.10"
rustcommon-atomics = { path = "../atomics" }
rustcommon-heatmap = { path = "../heatmap" }
rustcommon-streamstats = { path = "../streamstats" }
rustcommon-time = { path = "../time" }
thiserror = "1.0.20"

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "counters"
harness = false
