[package]
name = "rustcommon-ratelimiter"
version = "1.1.0"
authors = ["Brian Martin <bmartin@twitter.com>"]
edition = "2021"
license = "Apache-2.0"
description = "Token bucket ratelimiter"
homepage = "https://github.com/twitter/rustcommon/ratelimiter"
repository = "https://github.com/twitter/rustcommon"

[dependencies]
rand = "0.7.3"
rand_distr = "0.2.2"
rustcommon-time = { path = "../time" }
