[package]
name = "rustcommon-ratelimiter"
version = "1.1.1"
authors = ["Brian Martin <bmartin@twitter.com>"]
edition = "2021"
license = "Apache-2.0"
description = "Token bucket ratelimiter"
homepage = "https://github.com/twitter/rustcommon/ratelimiter"
repository = "https://github.com/twitter/rustcommon"

[dependencies]
rand = "0.8.5"
rand_distr = "0.4.3"
rustcommon-time = { path = "../time" }
