[package]
name = "rustcommon-time"
version = "0.0.6"
authors = ["Brian Martin <bmartin@twitter.com>"]
edition = "2018"

[dependencies]
libc = "0.2.86"
lazy_static = "1.4.0"

[target.'cfg(windows)'.dependencies]
lazy_static = "1.4.0"
winapi = { version = "0.3.9", features = ["profileapi", "sysinfoapi"] }

[target.'cfg(any(target_os = "macos", target_os = "ios"))'.dependencies]
mach = "0.3.2"

[target.'cfg(all(not(windows), not(unix), not(target_os = "macos"), not(target_os = "ios")))'.dependencies]
lazy_static = "1.4.0"
