[package]
name = "rustcommon-time"
version = "0.0.11"
authors = ["Brian Martin <bmartin@twitter.com>"]
edition = "2021"
description = "Library for getting current and recent timestamps"
homepage = "https://github.com/twitter/rustcommon"
repository = "https://github.com/twitter/rustcommon"
license = "Apache-2.0"

[dependencies]
libc = "0.2.86"
time = { version = "0.3.3", features = ["formatting"] }

[target.'cfg(windows)'.dependencies]
lazy_static = "1.4.0"
winapi = { version = "0.3.9", features = ["profileapi", "sysinfoapi"] }

[target.'cfg(any(target_os = "macos", target_os = "ios"))'.dependencies]
mach = "0.3.2"

[target.'cfg(all(not(windows), not(unix), not(target_os = "macos"), not(target_os = "ios")))'.dependencies]
lazy_static = "1.4.0"

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "benches"
harness = false
