[package]
name = "rustcommon-waterfall"
version = "1.0.0"
authors = ["Brian Martin <bmartin@twitter.com>"]
edition = "2018"
license = "Apache-2.0"
description = "Generates waterfalls from heatmaps"
homepage = "https://github.com/twitter/rustcommon/waterfall"
repository = "https://github.com/twitter/rustcommon"

[dependencies]
chrono = "0.4.15"
dejavu = "2.37.0"
hsl = "0.1.1"
log = "0.4.8"
png = "0.16.3"
rustcommon-heatmap = { path = "../heatmap" }
rustcommon-histogram = { path = "../histogram" }
rusttype = "0.8.3"

[dev-dependencies]
rand = "0.7.3"
rand_distr = "0.2.2"
rustcommon-logger = { path = "../logger" }