[package]
name = "rustcommon-waterfall"
version = "1.0.0"
authors = ["Brian Martin <bmartin@twitter.com>"]
edition = "2018"
license = "Apache-2.0"
description = "Generates waterfalls from heatmaps"
homepage = "https://github.com/twitter/rustcommon/waterfall"
repository = "https://github.com/twitter/rustcommon"

[dependencies]
chrono = { version = "0.4.15", default-features = false }
dejavu = "2.37.0"
image = "0.23.9"
log = "0.4.8"
rustcommon-heatmap = { path = "../heatmap" }
rustcommon-histogram = { path = "../histogram" }
rusttype = "0.9.2"

[dev-dependencies]
rand = "0.7.3"
rand_distr = "0.2.2"
rustcommon-logger = { path = "../logger" }