[package]
name = "rustcommon-waterfall"
version = "1.0.2"
authors = ["Brian Martin <bmartin@twitter.com>"]
edition = "2021"
license = "Apache-2.0"
description = "Generates waterfalls from heatmaps"
homepage = "https://github.com/twitter/rustcommon/waterfall"
repository = "https://github.com/twitter/rustcommon"

[dependencies]
dejavu = "2.37.0"
image = "0.24.3"
log = "0.4.17"
heatmap = { path = "../heatmap" }
histogram = { path = "../histogram" }
rustcommon-time = { path = "../time" }
rusttype = "0.9.2"

[dev-dependencies]
rand = "0.8.5"
rand_distr = "0.4.3"
rustcommon-logger = { path = "../logger" }